--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "gray-matter": "^4.0.2",
     "next": "10.0.7",
+    "prismjs": "^1.23.0",
+    "raw-loader": "^4.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "typescript": "^4.2.2"
   }
 }
