--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "gray-matter": "^4.0.2",
     "next": "10.0.7",
     "prismjs": "^1.23.0",
