--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-syntax-highlighter": "^13.5.0",
+    "nextjs-sitemap-generator": "^1.3.1",
     "typescript": "^4.2.2"
   }
 }
