--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.3",
+    "react-responsive": "^8.2.0",
     "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-syntax-highlighter": "^13.5.0",
     "nextjs-sitemap-generator": "^1.3.1",
     "typescript": "^4.2.2"
