--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.3",
     "react-responsive": "^8.2.0",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-slick": "^0.28.1",
+    "react-syntax-highlighter": "^15.4.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
