--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-responsive": "^8.0.2",
+    "@types/react-slick": "^0.23.4",
     "@types/react-syntax-highlighter": "^13.5.0",
     "nextjs-sitemap-generator": "^1.3.1",
     "typescript": "^4.2.2"
