--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.21",
     "@material-ui/icons": "^4.11.2",
+    "@typescript-eslint/parser": "^5.3.0",
     "gray-matter": "^4.0.2",
     "next": "^10.0.7",
     "react": "17.0.1",
