--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export && next-sitemap --config sitemap.config.js",
     "start": "next start",
-    "export": "next export",
-    "format": "prettier --write 'src/**/*.js' && eslint ./src/"
+    "format": "prettier --write 'src/**/*.js' && eslint ./src/",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@material-ui/data-grid": "^4.0.0-alpha.21",
     "@material-ui/icons": "^4.11.2",
-    "@typescript-eslint/parser": "^5.3.0",
     "gray-matter": "^4.0.2",
-    "next": "^10.0.7",
+    "next": "12",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.3",
@@ -32,11 +30,12 @@
     "@types/react-slick": "^0.23.4",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "nextjs-sitemap-generator": "^1.3.1",
+    "next-sitemap": "^1.6.203",
     "prettier": "^2.4.1",
     "typescript": "^4.2.2"
   }
